--- a/app/src/styles/variables.scss
+++ b/app/src/styles/variables.scss
@@ -1,3 +1,4 @@
 
 // Color palette
-$cell-bg: #FF2C97;
+$cell-border: #444;
+$cell-bg: #5D56F0;
